@@ -1,3 +1,8 @@
+2004-03-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* subsys/system/usetup/bootsup.c (UpdateFreeLoaderIni): Use existing
+	ReactOS entry if available.
+
 2004-03-09  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* regtests/Makefile: Make REGTEST_TARGETS depend on *.c.
